WebCore:

Reviewed by Sam Weinig.

        - preparation https://bugs.webkit.org/show_bug.cgi?id=3729
          <rdar://problem/4036353> REGRESSION: arrow keys move insertion bar backwards in RTL text

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren): Make sure to give the
        trailing white space a bidi level consistent with its position.

LayoutTests:

        Reviewed by Sam Weinig.

        - updated results with the trailing space having the right directionality

        * platform/mac/fast/text/trailing-white-space-2-expected.txt:



Canonical link: https://commits.webkit.org/25719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32402 268f45cc-cd09-0410-ab3c-d52691b4dbfc