WebCore/rendering/bidi.cpp
@@ -991,10 +991,13 @@ void RenderBlock::layoutInlineChildren(bool relayoutChildren, int& repaintTop, i
                                 }
                             }
                             if (shouldReorder) {
-                                if (direction == LTR)
+                                if (direction == LTR) {
                                     start.moveRunToEnd(trailingSpaceRun);
-                                else
+                                    trailingSpaceRun->m_level = 0;
+                                } else {
                                     start.moveRunToBeginning(trailingSpaceRun);
+                                    trailingSpaceRun->m_level = 1;
+                                }
                             }
                         }
                     } else
